hphp/hack/test/typecheck/instanceof/instanceof_generic_bad4.php.exp
File "instanceof_generic_bad4.php", line 9, characters 20-21:
Invalid argument (Typing[4110])
File "instanceof_generic_bad4.php", line 6, characters 29-32:
Expected Base
File "instanceof_generic_bad4.php", line 6, characters 29-32:
Considering that this type argument is invariant with respect to Inv
File "instanceof_generic_bad4.php", line 8, characters 13-15:
But got Tinv#1 from this `is` expression test
